--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,6 @@ body {
   line-height: normal;
 }
 
-.egg {
-  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
-}
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -23,5 +19,85 @@ input:-webkit-autofill:active {
 @layer components {
   .xc-middle {
     @apply flex items-center justify-center;
+  }
+
+  .xc-between {
+    @apply flex items-center justify-between;
+  }
+
+  .xc-section-title {
+    @apply text-lg font-medium text-white leading-tight pb-4;
+  }
+
+  .xc-input-label {
+    @apply text-xc-cardText text-sm leading-tight pb-2.5;
+  }
+
+  .xc-select {
+    @apply w-full px-4 py-2.5 md:px-[25px] md:py-[21px] bg-transparent cursor-pointer rounded-[5px] border text-xc-text text-sm leading-tight border-xc-borderColor appearance-none focus-visible:outline-0;
+  }
+
+  .xc-select-arrow {
+    @apply h-5 w-5 rounded flex items-center justify-center bg-xc-borderColor;
+  }
+
+  .xc-server-item {
+    @apply col-span-1 pt-4 pr-[19px] pb-6 pl-6 flex gap-5 h-full cursor-pointer items-center border rounded;
+  }
+
+  .xc-toggle-container {
+    @apply block h-6 w-[42px] rounded-full;
+  }
+
+  .xc-toggle-button {
+    @apply absolute left-1 top-1 flex h-4 w-4 items-center justify-center rounded-full  transition;
+  }
+
+  .xc-blueprint-deselect {
+    @apply h-4 w-4 flex items-center justify-center border border-xc-borderColor absolute top-2 right-2 z-20 rounded-full m-[2px];
+  }
+
+  .xc-blueprint-card {
+    @apply flex items-start gap-[5px] p-[15px] rounded-md border z-10 cursor-pointer;
+  }
+
+  .xc-badge {
+    @apply text-xs text-white leading-normal px-1 rounded bg-xc-borderColor;
+  }
+
+  .xc-blueprint-btn-container {
+    @apply flex flex-wrap gap-3 sm:gap-5 items-center justify-center md:justify-end pt-4;
+  }
+
+  .xc-profile-dropdown-container {
+    @apply block w-[200px] md:w-full absolute top-[calc(100%+8px)] right-0 bg-[#2a3268] rounded;
+  }
+
+  .xc-create-blueprint-content {
+    @apply bg-xc-background fixed inset-0 flex flex-col items-center justify-center z-40 overflow-hidden;
+  }
+
+  .xc-modal-content {
+    @apply w-full max-w-lg px-4 xl:px-0 relative overflow-auto;
+  }
+
+  .xc-modal-title {
+    @apply text-white text-2xl md:text-3xl;
+  }
+
+  .xc-create-blueprint-input {
+    @apply bg-transparent w-full focus-visible:outline-0 text-xc-text text-base px-[61px] py-4 border rounded border-xc-borderColor;
+  }
+
+  .xc-plugin-container {
+    @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 max-h-[510px] overflow-auto scrollbar-hide mt-6 pb-[60px];
+  }
+
+  .xc-plugin-card {
+    @apply bg-xc-background rounded-lg relative divide-y-[1px] divide-xc-foreground cursor-pointer border;
+  }
+
+  .xc-footer {
+    @apply xc-between text-xc-text text-sm py-4 leading-tight gap-4 border-t border-xc-foreground mt-[76px];
   }
 }
